v0.2.3:
- FIX: Spells could still be dropped with right-click even though window is closed
- Take out M-Néé support for now

v0.2.2:
- FIX: More better compatibility with modded spells

v0.2.1:
- FIX: Spells added by other mods should work better now

v0.2.0:
- Add calibration mod setting for custom screen resolutions

v0.1.2:
- Remove leftover debug prints()

v0.1.1:
- FIX: Stored spells were not getting saved on auto-storage

v0.1.0:
- First release